# glauber-rs

./: Cargo.toml
src/: canvas.rs  cells.rs  config.rs  controls.rs  main.rs  simulation.rs  support.rs  todo.txt  worker.rs
