[package]
name = "glauber"
version = "0.1.0"
authors = ["AlphaModder"]
edition = "2018"
publish = false

[dependencies]
gfx = "0.18"
gfx_window_glutin = "0.31.0"
gfx_device_gl = "0.16.0"
glutin = "0.21.0"
imgui = "0.1"
imgui-winit-support = "0.1"
imgui-gfx-renderer = "0.1"
image = "0.22.1"
rand = "0.7.0"
lazy_static = "1.3.0"



